# graph_optimization

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
launch/: graph_optimization.launch
sample_data/: example_optimized_graph.g2o  example_original_graph.g2o  optimized_graph.g2o
scripts/: simple_graph_optimization.py
src/graph_optimization/: file_write_lib.py  plot_lib.py  pose_graph_optimization.py  rosbot_interface.py
